--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f8c8dc;
+    background-color: #8B0A1A;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     font-weight: 400;
@@ -48,7 +48,7 @@ body {
     margin-top: 10px;
   }
   .button {
-    background-color: #ff4f99;
+    background-color: #8B0A1A;
     border: none;
     color: rgb(0, 0, 0);
     padding: 10px 20px;
@@ -62,7 +62,7 @@ body {
   }
   
   .button:hover {
-    background-color: #ff71ac;
+    background-color: #8B0A1A;
     color: white;
     transition: ease-in-out 0.3s;
   }
