--- a/style2.css
+++ b/style2.css
@@ -48,7 +48,7 @@ body {
     margin-top: 10px;
   }
   .button {
-    background-color: #8B0A1A;
+    background-color: #ADD8E6;
     border: none;
     color: rgb(0, 0, 0);
     padding: 10px 20px;
@@ -62,7 +62,7 @@ body {
   }
   
   .button:hover {
-    background-color: #8B0A1A;
+    background-color: #ADD8E6;
     color: white;
     transition: ease-in-out 0.3s;
   }
